syntax = "proto3";

package pb.user;

option go_package="pb/user";

message User {
    int32 id = 1;
    string name = 2;
    string email = 3;
    bool active = 4;
}

message ListUsersRequest {}



message ListUsersResponse {
    repeated User users = 1;
}

message CreateUserRequest {
    string name = 1;
    string email = 2;
}

service UserService {
    rpc ListUsers(ListUsersRequest) returns (ListUsersResponse) {}
    rpc CreateUser(CreateUserRequest) returns (User) {}
}